# fractal-fw-update

./: .clang-format  CMakeLists.txt  LICENSE  README.md  fa-fw-update.cpp
snap/: snapcraft.yaml
